designers-toolkit-react/client/main.css
/* ... */
.dashboardStandardText{
  font-size: 15px;
  font-family: 'Montserrat';
  align-self: center;
  text-align: left;
}

.dashboardStandardText.paragraph{
  text-align: center;
}

.dashboardStartButton{
  border: none;
  background: none;
}

.dashboardDivMargin{
  padding-top: 10%;
}

.textTopMargin{
  padding-top: 8%;
}

.roamModeTopTextLeftPadding{
  padding-left: 4%;
}

.alignNavBarText{
  align-items: center;
}

.buttonText{
  color:white;
  font-family: 'Montserrat';
  text-decoration: none;
  font-weight: 800;
  font-size: 18px;
  margin-top: auto;
  margin-bottom: auto;
}

.buttonText.big{
  font-size: 24px;
}

.dashboardStartButton{
  width: 250px;
  height: 85px;
  background-color: #8C3EC9;
  border-radius: 40px;
}

.dashboardStartButton:hover{
  background-color: #834DAE ;
}

.dashboardSignInButton{
  width: 151px;
  height: 51px;
  background-color: #EE6C4D;
  border-radius: 40px;
  border: none;
}

.dashboardCreateAccountButton{
  width: 285px;
  height: 51px;
  background-color: #68259D;
  border-radius: 40px;
  border: none;
}

.currentplan-add-button{
  width: 180px;
  height: 60px;
  background-color: #EE6C4D;
  border-radius: 10px;
  border: none;
  margin-top:10px;
}

.currentplan-plus-img{
  width: 22px;
  height: 22px;
}

.methodCard{
  width: 180px;
  height:260px;
  background-color:rgb(255, 255, 255);
  border-radius: 5px;
  border-width: 4px;
  border-style:solid;
  border-color: rgb(0, 0, 0);
  /* margin-left:20px; */
  margin-top:20px;
  
  -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
  -moz-animation: fadein 1s; /* Firefox < 16 */
   -ms-animation: fadein 1s; /* Internet Explorer */
    -o-animation: fadein 1s; /* Opera < 12.1 */
       animation: fadein 1s;

}

.methodContainer{
  padding:0px;
}

.cardImg {
  margin-top:10px;
  width:90px;
  height:90px;
  align-items: center;
}

.cardIcon {
  align-items: center;
  width: 30px;
  height:30px;
}

.stupid-col {
  width: fit-content;
}

.cardHeader {
  margin-top:5px;
  font-size: 13px;
  padding-bottom:0px;
  text-align:center;
}

.cardHeader.btnHead {
  margin-top:5px;
}

.cardBtn {
  border-radius:300px;
  background-color:white;
  border-color:black;
  padding:3px;
  width:70%;
  transition: 0.3s;
}

.cardBtn:hover{
  background-color: #B8D0EB;
  color: white;
}

.circle {
  background: lightblue;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  margin-left:0px;
 
}
.circleCol{
  padding:1px;
}

.iconCol{
  padding:0px;
}

.method-circle{
  background: lightblue;
  border-radius: 50%;
  width: 20px;
  height: 20px;
}

.understand { 
  background: #ABBF4A;
}

.define { 
  background: #85953A;
}

.sketch {
  background: #3076DF;
}

.decide {
  background: #8C3A9D;
}

.prototype{
  background: #FF5F5F;
}

.validate {
  background: #E52525;
}

.none{
  background:rgb(194, 194, 194);
}

.dropDownMenu {
  margin-top:5px;
  background-color: #ffffff ;
  box-shadow: 5px 10px 18px #888888;
  border-radius:5px;
  padding:5px;
  border-style:solid;
  border-color:black;
  position:relative;
  z-index: 100;

  -webkit-animation: fadein 0.4s; /* Safari, Chrome and Opera > 12.1 */
  -moz-animation: fadein 0.4s; /* Firefox < 16 */
   -ms-animation: fadein 0.4s; /* Internet Explorer */
    -o-animation: fadein 0.4s; /* Opera < 12.1 */
       animation: fadein 0.4s;
}

.phaseBtn{
  
  border-radius:30px;
  margin-bottom:none;
  padding-left:10px;
  padding-right:10px;
  margin-bottom:5px;
  font-size:0px;
  letter-spacing: 0px;
  word-spacing: 0px;
  cursor: pointer;

}

.phaseBtn:hover {

    -webkit-filter: brightness(70%);
    -webkit-transition: all 1s ease;
    -moz-transition: all 1s ease;
    -o-transition: all 1s ease;
    -ms-transition: all 1s ease;
    transition: all 1s ease;
}


.whiteHeader.phase{
  display:inline-block;
  font-size: medium;
  margin:0px;
  padding:0px;
}

.tinyTripleDiamond {
  margin-top:40px;
  margin-bottom:40px;
  width:100%;
  height:60px;
}

.circle.sprint{
  width:25px;
  height:25px;
}

.sprintCol {
  background-color: #ffffff;
  border-left: 3px solid;
  border-left-color: rgb(194, 194, 194);
}

.sprintsContainer{
  margin-top:20px;
}

.triangleLeft2 {
  width: 0px;
  height: 0px;
  border-style: inset;
  border-width: 0px 100px 140px 100px;
  border-color: transparent transparent #007bff transparent;
  float: left;
  transition-duration: 500ms;
}

.triangleLeft2:hover{
  border-width: 0 110px 154px 110px;
  cursor: pointer;
}

.triangleLeft2 p {
  font-size:12px;
  text-align: center;
  top: 50px;
  left: -70px;
  position: relative;
  width: 93px;
  height: 93px;
  margin: 0px;
  transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  -moz-transform: rotate(90deg);
  -webkit-transform: rotate(90deg);
  -o-transform: rotate(90deg);
}

.triangleLeft {
  width: 0px;
  height: 0px;
  border-style: inset;
  border-width: 0px 100px 140px 100px;
  border-color: transparent transparent #007bff transparent;
  float: left;
  transform: rotate(270deg);
  -ms-transform: rotate(270deg);
  -moz-transform: rotate(270deg);
  -webkit-transform: rotate(270deg);
  -o-transform: rotate(270deg);
  transition-duration: 500ms;
  margin-left:-60px;
}
.triangleLeft:hover{
  border-width: 0 110px 154px 110px;
  cursor: pointer;
}

.triangleLeft p {
  font-size:12px;
  text-align: center;
  top: 50px;
  left: -70px;
  position: relative;
  width: 93px;
  height: 93px;
  margin: 0px;
  transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  -moz-transform: rotate(90deg);
  -webkit-transform: rotate(90deg);
  -o-transform: rotate(90deg);
}

.triangleRight {
  width: 0px;
  height: 0px;
  border-style: inset;
  border-width: 0 100px 140px 100px;
  border-color: transparent transparent #007bff transparent;
  float: left;
  transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  -moz-transform: rotate(90deg);
  -webkit-transform: rotate(90deg);
  -o-transform: rotate(90deg);
  transition-duration: 500ms;
  margin-left:-60px;
}
/* ... */

